--- a/wwwroot/spa.html
+++ b/wwwroot/spa.html
@@ -1,7 +1,6 @@
 ﻿<!DOCTYPE html>
 
 <script type="text/javascript" src="//code.jquery.com/jquery-3.3.1.js"></script>
-<script type="text/javascript" src="/js/oidc.js"></script>
 <script type="text/javascript">
 
     var issuer = "https://login.example.ubidemo.com/uas";
@@ -9,6 +8,57 @@
     var id_token = null;
 
     var api_endpoint = "http://localhost:5001/simple"
+
+    function getConfiguration(issuer) {
+        return fetch(issuer + "/.well-known/openid-configuration")
+            .then(function (response) {
+                return response.ok
+                    ? response.json()
+                    : Promise.reject(response);
+            });
+    }
+
+    function sendAuthenticationRequest(configuration, client_id, scope) {
+        var authorization_request = configuration.authorization_endpoint;
+        authorization_request += "?response_type=code";
+        authorization_request += "&scope=" + encodeURIComponent(scope);
+        authorization_request += "&client_id=" + encodeURIComponent(client_id);
+        authorization_request += "&redirect_uri=" + encodeURIComponent(location.origin + "/spa.html");
+        if (location.hash.startsWith("#/")) {
+            var state = location.hash.substr(1);
+            authorization_request += "&state=" + encodeURIComponent(state);
+        }
+        var nonce = Array.from(window.crypto.getRandomValues(new Uint32Array(4)), t => t.toString(36)).join("");
+        authorization_request += "&nonce=" + encodeURIComponent(nonce);
+        window.sessionStorage.setItem("nonce", nonce);
+        location = authorization_request;
+    }
+
+    function invokeTokenRequest(configuration, client_id, client_secret, code) {
+        var token_endpoint = configuration.token_endpoint;
+        var headers = { "Content-Type": "application/x-www-form-urlencoded" };
+        var body = "grant_type=authorization_code";
+        body += "&code=" + encodeURIComponent(code);
+        body += "&client_id=" + encodeURIComponent(client_id);
+        body += "&client_secret=" + encodeURIComponent(client_secret);
+        body += "&redirect_uri=" + encodeURIComponent(location.origin + "/spa.html");
+        console.log("invokeTokenRequest body " + body);
+        return fetch(token_endpoint, { mode: "cors", cache: "no-store", method: "POST", headers: headers, body: body })
+            .then(function (response) {
+                console.log("invokeTokenRequest httpResponse " + response.status);
+                return response.ok
+                    ? response.json()
+                    : Promise.reject(response);
+            })
+            .then(function (response) {
+                console.log("invokeTokenRequest tokenResponse " + JSON.stringify(response));
+                return Promise.resolve(response);
+            })
+            .catch(function (error) {
+                console.error("invokeTokenRequest error " + error);
+                return Promise.reject(error);
+            });
+    }
 
     function invokeApi(access_token) {
         var headers = (access_token != null)
@@ -22,15 +72,15 @@
             });
     }
 
-    $(function () {
+    // receives notifications when fragment part changes
+    window.addEventListener("hashchange", function () {
+        console.log("hashchange hash=" + location.hash + ", access_token=" + access_token);
+        $("#id_token").text(id_token);
+    });
+
+    document.addEventListener("DOMContentLoaded", function () {
 
         console.log("access_token=" + access_token);
-
-        // receives notifications when fragment part changes
-        window.addEventListener("hashchange", function () {
-            console.log("hashchange hash=" + location.hash + ", access_token=" + access_token);
-            $("#id_token").text(id_token);
-        });
 
         // click Login button sends browser to Ubisecure SSO
         $("#login").click(function () {
@@ -58,7 +108,7 @@
         });
 
         // the page was navigated to with query parameters (/spa.html?code=abcd1234)
-        // this copies query string into fragment part, which is easier to process in context of SPA 
+        // this copies query string into fragment part, which is easier to process in context of SPA
         if (location.search.match(/^\?(.*)$/)) {
             console.log("rewrite location.search");
             location.replace("/spa.html#" + RegExp.$1);
@@ -66,7 +116,7 @@
         }
 
         // the frament part contains authorization code
-        // this invokes token request with authorization code to fetch access_token and id_token 
+        // this invokes token request with authorization code to fetch access_token and id_token
         // the tokens are saved into javascript variables
         // when complete fragment part is set to empty string
         if (location.hash.match(/(^|#|&)code=([^&]*)($|&)/)) {
@@ -76,9 +126,16 @@
                 .then(config => invokeTokenRequest(config, "public", "public", code))
                 .then(function (response) {
                     console.log("token response " + JSON.stringify(response));
+                    var state = "";
+                    if (location.hash.match(/(^|#|&)state=([^&]*)($|&)/)) {
+                        var t = decodeURIComponent(RegExp.$2);
+                        if (t.startsWith("/")) {
+                            state = t;
+                        }
+                    }
                     access_token = response.access_token;
                     id_token = response.id_token;
-                    location.hash = "";
+                    location.hash = state;
                 });
         }
 
